fix: use letter spacing from theme

--- a/src/theme/theme-typography.scss
+++ b/src/theme/theme-typography.scss
@@ -1,61 +1,76 @@
 .mat-body-small {
   font: var(--mat-sys-body-small);
+  letter-spacing: var(--mat-sys-body-small-tracking);
 }
 
 .mat-body-medium {
   font: var(--mat-sys-body-medium);
+  letter-spacing: var(--mat-sys-body-medium-tracking);
 }
 
 .mat-body-large {
   font: var(--mat-sys-body-large);
+  letter-spacing: var(--mat-sys-body-large-tracking);
 }
 
 .mat-display-small {
   font: var(--mat-sys-display-small);
+  letter-spacing: var(--mat-sys-display-small-tracking);
 }
 
 .mat-display-medium {
   font: var(--mat-sys-display-medium);
+  letter-spacing: var(--mat-sys-display-medium-tracking);
 }
 
 .mat-display-large {
   font: var(--mat-sys-display-large);
+  letter-spacing: var(--mat-sys-display-large-tracking);
 }
 
 .mat-headline-small {
   font: var(--mat-sys-headline-small);
+  letter-spacing: var(--mat-sys-headline-small-tracking);
 }
 
 .mat-headline-medium {
   font: var(--mat-sys-headline-medium);
+  letter-spacing: var(--mat-sys-headline-medium-tracking);
 }
 
 .mat-headline-large {
   font: var(--mat-sys-headline-large);
+  letter-spacing: var(--mat-sys-headline-large-tracking);
 }
 
 .mat-label-small {
   font: var(--mat-sys-label-small);
+  letter-spacing: var(--mat-sys-label-small-tracking);
 }
 
 .mat-label-medium {
   font: var(--mat-sys-label-medium);
+  letter-spacing: var(--mat-sys-label-medium-tracking);
 }
 
 .mat-label-large {
   font: var(--mat-sys-label-large);
+  letter-spacing: var(--mat-sys-label-large-tracking);
 }
 
 .mat-title-small {
   font: var(--mat-sys-title-small);
+  letter-spacing: var(--mat-sys-title-small-tracking);
 }
 
 .mat-title-medium {
   font: var(--mat-sys-title-medium);
+  letter-spacing: var(--mat-sys-title-medium-tracking);
 }
 
 .mat-title-large {
   font: var(--mat-sys-title-large);
+  letter-spacing: var(--mat-sys-title-large-tracking);
 }
 
 h1,
